ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-svc
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: service-group
    alb.ingress.kubernetes.io/subnets: subnet-03a963813cb67c92c,subnet-0dc2aa085824b1d65,subnet-0bbb7a3bbdf035b28
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-demo-service
            port:
              number: 80
